fix: naming and site url update

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     />
     <meta name="author" content="Regixo" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://regixo.vercel.app" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#ffffff" />
+
     <!-- Open Graph -->
     <meta
       property="og:title"
@@ -20,12 +30,27 @@
       content="Free and open-source event registration — no login required. Get tickets instantly. Organizers can filter, approve, and reject registrations effortlessly."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.jpeg" />
+    <meta property="og:url" content="https://regixo.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://regixo.vercel.app/og-image.jpeg"
+    />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@regixo" />
-    <meta name="twitter:image" content="/og-image.jpeg" />
+    <meta
+      name="twitter:title"
+      content="Regixo — Effortless Event Registration"
+    />
+    <meta
+      name="twitter:description"
+      content="Free and open-source event registration — no login required. Get tickets instantly. Organizers can filter, approve, and reject registrations effortlessly."
+    />
+    <meta
+      name="twitter:image"
+      content="https://regixo.vercel.app/og-image.jpeg"
+    />
   </head>
 
   <body>
